--- a/app/Resources/views/preMatch/email.txt.twig
+++ b/app/Resources/views/preMatch/email.txt.twig
@@ -1,42 +1,47 @@
 Hej {{ user.firstName }}!
 
-Nu har vi hittat en Startkompis till dig att upptäcka {{ connectionRequest.municipality.name }} med! {{ otherUser.gender|pronoun|capitalize }} heter {{ otherUser.name }}, är {{ otherUser.age }} år och kommer från {{ otherUser.from|country_name }}.
-
+Nu har vi hittat en kompismatchning till dig! {{ otherUser.gender|pronoun|capitalize }} heter {{ otherUser.name }}, är {{ otherUser.age }} år och kommer från {{ otherUser.from|country_name }}.
 
 Vi föreslår att ni träffas {{ connectionRequest.municipality.meetingPlace }}.
 
-{{ otherUser.firstName }}s kontaktuppgifter är: {{ otherUser.phoneNumber }} och {{ otherUser.email }}.
+{{ otherUser.firstName }}s kontaktuppgifter är: {{ otherUser.phoneNumber }} och {{ otherUser.email }}
 
 Gör såhär:
-1. Bekräfta ert möte. Du som är etablerad i kommunen har nu huvudansvaret att inom 7 dagar bekräfta att ni ska ses den föreslagna tiden. Om tiden vi har föreslagit inte passar er måste du hitta en ny tid som passar er båda. Inför ert möte, tänker du ut en promenad i närområdet på cirka 1 timme.
+1. Bestäm ett datum. Du mailar personen inom 3 dagar och bestämmer datum, tid och plats för mötet. Skriv gärna på svenska och engelska. Det är bådas ansvar att ni etablerar kontakt med varandra. Kom ihåg att respektera varandra, att inte svara på ett mail påverkar den andra personen som har sett fram emot ett möte. Kontakta oss om du inte får svar.
+ 
+Vi rekommenderar att ni skickar en sms-påminnelse dagen innan ert möte som den andra personen bekräftar.
 
-2. Gå en promenad i 1 timme och lär känna er kommun.
-Om ni vill, ta gärna ett foto under er promenad och skicka till oss tillsammans med några rader om hur det var. Vi delar gärna er hälsning i våra sociala medier för att inspirera fler till att vara med.
+2. Ni träffas i ca 1 timme och lär känna varandra. Vi rekommenderar att ni går en promenad i närområdet eller går och fikar på ett café.
 
-Vi önskar er en trevlig promenad!
+3. Om ni vill, ta gärna ett foto från ert möte och skriv några rader om vad ni gjorde och hur det var. Maila hälsningen till oss så delar vi den gärna digitalt för att inspirera fler till att vara med. Eller hashtagga själv med #kompisbyrån eller #kompisbyran.
 
-Bästa hälsningar
-Startkompis-teamet!
+Vi önskar er ett trevligt möte!
 
-PS. Kom ihåg att respektera varandra, att inte svara påverkar den andra personen som har sett fram emot ert möte. Maila oss om du inte får kontakt med din startkompis inom 7 dagar så hjälper vi till.
+Bästa hälsningar,
+Vännerna på Kompisbyrån
+
+PS. Kom ihåg att respektera varandra, att inte svara påverkar den andra personen som har sett fram emot ert möte. Maila oss om du inte får kontakt med din matchning inom 7 dagar så hjälper vi till.
 
 -----English-----
 Dear {{ user.firstName }},
 
-We have found a Startkompis (Start friend) for you to discover {{ connectionRequest.municipality.name }} with! The person’s name is {{ otherUser.name }}, is {{ otherUser.age }} years old and comes from {{ otherUser.from|country_name }}.
+We have now found a friend match for you! The person’s name is {{ otherUser.name }}, is {{ otherUser.age }} years old and comes from {{ otherUser.from|country_name }}.
 
 We suggest that you meet {{ connectionRequest.municipality.meetingPlace }}.
 
-{{ otherUser.firstName }}’s contact details are: {{ otherUser.phoneNumber }} and {{ otherUser.email }}.
+{{ otherUser.firstName }}’s contact details are: {{ otherUser.phoneNumber }} and {{ otherUser.email }}
 
 How it works: 
-1. You contact your Start friend within 7 days to confirm date, time and place of the meeting.
 
-2. You meet and go for a walk in the neighborhood for about 1 hour. If you want, please take a picture from your meeting and send to us :) 
+1. You contact your friend match within 3 days to decide a date, time and place for the meeting
 
-We wish you a nice walk!
+2. You meet for about 1 hour and get to know each other. We recommend that you take a walk in the neighborhood or go for a coffee at a local café. 
 
-Best regard,
-The Startkompis team at Kompisbyrån
+3. If you want to, take a picture from your meeting and send it to us. This way we can share your meeting at Facebook or Instagram to inspire more people to meet new friends through Kompisbyrån.
+
+We wish you a nice time!
+
+Best regards,
+Your friends at Kompisbyrån
 
 PS. Remember to respect each other, not responding affect the other person who has been looking forward to your meeting. Contact us if you need help to get in touch!
