--- a/app/Resources/views/user/settings.html.twig
+++ b/app/Resources/views/user/settings.html.twig
@@ -10,7 +10,11 @@
                 <div class="col-md-offset-3 col-md-6">
                     {{ include(':user:form.html.twig') }}
                     <div class="form-group">
-                        <button type="submit" class="btn btn-default btn-orange btn-lg">
+                        <button
+                            type="submit"
+                            class="btn btn-default btn-orange btn-lg
+                                {% if form.connectionRequests is not defined or is_granted('ROLE_COMPLETE_USER') == false %}btn-super-lg{% endif %}
+                            ">
                             {% if form.connectionRequests is defined %}
                                 {{ 'connection_request.form.button'|trans }}
                             {% elseif is_granted('ROLE_COMPLETE_USER') %}
