--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -128,4 +128,9 @@ h2 span {
 }
 h3 {
     color: #F16B46;
+    margin-top: 1.7em;
+}
+.btn-super-lg {
+    padding: 0.7em 1.3em;
+    font-size: 1.5em;
 }
