--- a/app/Resources/views/admin2/user/info.html.twig
+++ b/app/Resources/views/admin2/user/info.html.twig
@@ -41,23 +41,14 @@
             <div class="col-sm-10">
                 <div class="form-control" id="area">
                     {% if connectionRequest.city %}
-                        {{ connectionRequest.city.name }}, {{ google_map_link(user.municipality.name) }}
+                        {{ connectionRequest.city.name }},
                     {% endif %}
                     {% if connectionRequest.municipality %}
-                        Connection request: {{ google_map_link(connectionRequest.municipality.name) }}
+                        {{ google_map_link(connectionRequest.municipality.name) }}
                     {% endif %}
                 </div>
             </div>
         </div>
-        {% if connectionRequest.municipality %}
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <div class="form-control">
-                    User: {{ google_map_link(user.municipality.name) }}
-                </div>
-            </div>
-        </div>
-        {% endif %}
         <div class="form-group">
             <label class="col-sm-2 control-label">{{ 'Children'|trans }}</label>
             <div class="col-sm-10">
