--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <div class="row" style="border: solid 1px black;">
+                <div class="row" style="border: solid 1px #ccc;">
                     <div class="col-md-6">
                         <h3>{{ 'register.create.header'|trans }}</h3>
 
