--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -137,6 +137,7 @@
                                         <li><a href="{{ path('admin_user_priviledges') }}">User Priviledges</a></li>
                                         <li><a href="{{ path('admin_municipality_administrators') }}">Kommunadministratörer</a></li>
                                         <li><a href="{{ path('admin_users') }}">Användare</a></li>
+                                        <li><a href="{{ path('admin_statistics_confirmed_meetings') }}">Personuppgifter deltagare</a></li>
                                     {% endif %}
                                     <li><a href="{{ path('admin_connections') }}">Matchade kompisar</a></li>
                                     <li><a href="{{ path('admin_statistics') }}">Statistik</a></li>
